--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,7 +9,7 @@
         android:id="@+id/oneFragment"
         android:name="jp.co.yumemi.android.code_check.SearchFragment"
         android:label="@string/app_name"
-        tools:layout="@layout/fragment_one">
+        tools:layout="@layout/fragment_search">
         <action
             android:id="@+id/action_repositoriesFragment_to_repositoryFragment"
             app:destination="@id/twoFragment" />
@@ -19,7 +19,7 @@
         android:id="@+id/twoFragment"
         android:name="jp.co.yumemi.android.code_check.RepositoryDetailFragment"
         android:label="@string/app_name"
-        tools:layout="@layout/fragment_two">
+        tools:layout="@layout/fragment_repository_detail">
         <argument
             android:name="item"
             app:argType="jp.co.yumemi.android.code_check.item" />
