--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,20 +3,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/apk/res-auto"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/oneFragment">
+    app:startDestination="@id/searchFragment">
 
     <fragment
-        android:id="@+id/oneFragment"
+        android:id="@+id/searchFragment"
         android:name="jp.co.yumemi.android.code_check.SearchFragment"
         android:label="@string/app_name"
         tools:layout="@layout/fragment_search">
         <action
             android:id="@+id/action_repositoriesFragment_to_repositoryFragment"
-            app:destination="@id/twoFragment" />
+            app:destination="@id/repositoryDetailFragment" />
     </fragment>
 
     <fragment
-        android:id="@+id/twoFragment"
+        android:id="@+id/repositoryDetailFragment"
         android:name="jp.co.yumemi.android.code_check.RepositoryDetailFragment"
         android:label="@string/app_name"
         tools:layout="@layout/fragment_repository_detail">
