--- a/app/src/main/res/layout/fragment_repository_detail.xml
+++ b/app/src/main/res/layout/fragment_repository_detail.xml
@@ -23,7 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="JetBrains/kotlin"
+        android:text="@string/repository_name"
         android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -43,7 +43,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="8dp"
-        android:text="Written in Kotlin"
+        android:text="@string/written_language"
         android:textColor="@color/black"
         android:textSize="14sp"
         app:layout_constraintTop_toBottomOf="@id/nameView"
@@ -55,7 +55,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="8dp"
-        android:text="38530 stars"
+        android:text="@string/stars_count"
         android:textAlignment="textEnd"
         android:textColor="@color/black"
         android:textSize="12sp"
@@ -69,7 +69,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="8dp"
-        android:text="38530 watchers"
+        android:text="@string/watchers_count"
         android:textAlignment="textEnd"
         android:textColor="@color/black"
         android:textSize="12sp"
@@ -83,7 +83,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="8dp"
-        android:text="4675 forks"
+        android:text="@string/forks_count"
         android:textAlignment="textEnd"
         android:textColor="@color/black"
         android:textSize="12sp"
@@ -97,7 +97,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="8dp"
-        android:text="131 open issues"
+        android:text="@string/open_issues_count"
         android:textAlignment="textEnd"
         android:textColor="@color/black"
         android:textSize="12sp"
