--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -21,7 +21,7 @@
         android:label="@string/app_name"
         tools:layout="@layout/fragment_repository_detail">
         <argument
-            android:name="item"
+            android:name="repositoryInfo"
             app:argType="jp.co.yumemi.android.code_check.RepositoryInfo" />
     </fragment>
 
